fixed footer height on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -515,7 +515,7 @@ input {
 
 	#wiki {
 		grid-template-columns: 1fr !important;
-		grid-template-rows: 10rem 22fr 1fr !important;
+		grid-template-rows: 10rem 22fr 13rem !important;
 	}
 
 	footer {
